--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,22 @@
         android:theme="@style/Theme.Myhouse_AOS"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.main.MainActivity"
+            android:name=".presentation.content.ContentActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>/>
+            </intent-filter>
         </activity>
         <activity
-            android:name=".presentation.dummy.DummyActivity"
+            android:name=".presentation.main.MainActivity"
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".presentation.dummy.DummyActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
