--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".presentation.content.ContentActivity"
-            android:exported="true">
+            android:name=".presentation.main.MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -25,17 +26,13 @@
         </activity>
 
         <activity
-            android:name=".presentation.main.MainActivity"
-            android:exported="true">
-
-        </activity>
-        <activity
-            android:name=".presentation.dummy.DummyActivity"
-            android:exported="true">
-        </activity>
+            android:name=".presentation.content.ContentActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.scrap.ScrapActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
